feat(US50): get list of Series
