# backend/src/swagger.json
@@ -37,9 +37,278 @@
                 }
               }
           }
+        },
+        "/serie": {
+            "get": {
+                "tags": ["Serie"],
+                "summary": "Get all series",
+                "produces": ["application/json"],
+                "responses": {
+                "200": {
+                    "description": "All series are returned",
+                    "schema": {
+                        "type": "array",
+                        "items": {
+                            "$ref": "#/definitions/Serie"
+                        }
+                    }
+                },
+                "500": {
+                    "description": "Internal server error"
+                }
+                }
+            },
+            "post": {
+                "tags": ["Serie"],
+                "summary": "Create a serie of defenses",
+                "parameters": [
+                    {
+                        "name": "serie",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/SerieCreation"
+                        },
+                        "required": true
+                    }
+                ],
+                "produces": ["application/json"],
+                "responses": {
+                    "200": {
+                    "description": "New serie is created"
+                    },
+                    "400": {
+                    "description": "A field is missing"
+                    },
+                    "500": {
+                    "description": "New serie is created"
+                    }
+                }
+            }
         }
       },
       "definitions": {
+        "Serie": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "label": {
+              "type": "string"
+            },
+            "createdAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "updatedAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "start": {
+              "type": "string",
+              "format": "date"
+            },
+            "end": {
+              "type": "string",
+              "format": "date"
+            },
+            "slots": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Slot"
+              }
+            },
+            "rooms": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Room"
+              }
+            },
+            "jurors": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Juror"
+              }
+            },
+            "students": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Student"
+              }
+            }
+          }
+        },
+        "Slot": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "label": {
+              "type": "string"
+            },
+            "createdAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "updatedAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "start": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "end": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "serieId": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        },
+        "Room": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "number": {
+              "type": "string"
+            },
+            "createdAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "updatedAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "serieId": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        },
+        "Juror": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "firstName": {
+              "type": "string"
+            },
+            "lastName": {
+              "type": "string"
+            },
+            "email": {
+              "type": "string"
+            },
+            "master": {
+              "type": "boolean"
+            },
+            "infoRelated": {
+              "type": "boolean"
+            },
+            "activated": {
+              "type": "boolean"
+            },
+            "createdAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "updatedAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "serieId": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "constraints": {
+              "type": "array",
+              "items": {
+                "$ref": "#/definitions/Constraint"
+              }
+            }
+          }
+        },
+        "Student": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "firstName": {
+              "type": "string"
+            },
+            "lastName": {
+              "type": "string"
+            },
+            "email": {
+              "type": "string"
+            },
+            "number": {
+              "type": "string"
+            },
+            "createdAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "updatedAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "serieId": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "masterId": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "tutorId": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        },
+        "Constraint": {
+          "type": "object",
+          "properties": {
+            "id": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "available": {
+              "type": "boolean"
+            },
+            "createdAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "updatedAt": {
+              "type": "string",
+              "format": "datetime"
+            },
+            "jurorId": {
+              "type": "integer",
+              "format": "int64"
+            },
+            "slotId": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        },
         "SerieCreation": {
           "required": ["label", "slots", "jurors", "students", "rooms"],
           "properties": {
